--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,5 @@
 <head>
-  <title>simple-todos-react</title>
+  <title>The Watchlist</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
